src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__captured-reasoning.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/captured-reasoning.jsonl
---
line_count: 97
checkpoint_count: 4
checkpoints:
  - line_index: 12
    event_type: item/completed
    roles: []
    last_part_types: []
  - line_index: 15
    event_type: item/completed
    roles: []
    last_part_types: []
  - line_index: 91
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - text
  - line_index: 95
    event_type: turn/completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 2
persisted_turns:
  turn_count: 1
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
