src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__delta-text.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/delta-text.jsonl
---
line_count: 5
checkpoint_count: 2
checkpoints:
  - line_index: 3
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - text
  - line_index: 4
    event_type: turn/completed
    roles:
      - assistant
    last_part_types:
      - text
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 1
persisted_turns:
  turn_count: 1
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
