src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__error-item.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/error-item.jsonl
---
line_count: 5
checkpoint_count: 3
checkpoints:
  - line_index: 2
    event_type: item.completed
    roles:
      - assistant
    last_part_types:
      - text
  - line_index: 3
    event_type: item.completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
  - line_index: 4
    event_type: turn.completed
    roles:
      - assistant
      - system
      - system
    last_part_types:
      - text
final_state:
  message_count: 3
  roles:
    - assistant
    - system
    - system
  total_parts: 3
persisted_turns:
  turn_count: 2
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
    - role: error
      block_types: []
historical_render:
  message_count: 2
  messages:
    - role: assistant
      part_types:
        - text
    - role: system
      part_types:
        - text
