src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__list-files.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/list-files.jsonl
---
line_count: 8
checkpoint_count: 4
checkpoints:
  - line_index: 2
    event_type: item.completed
    roles:
      - assistant
    last_part_types:
      - text
  - line_index: 4
    event_type: item.completed
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
  - line_index: 5
    event_type: item.completed
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
      - text
  - line_index: 6
    event_type: turn.completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 4
persisted_turns:
  turn_count: 3
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
        - tool-call
        - text
