src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__multi-step.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/multi-step.jsonl
---
line_count: 23
checkpoint_count: 0
checkpoints: []
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 11
persisted_turns:
  turn_count: 10
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
        - text
        - tool-call
        - text
        - tool-call
        - text
        - tool-call
        - text
        - tool-call
        - text
